@@ -1,5 +1,11 @@
 == org.nfunk.* =======================================================
 
+May 02 05 rjm - Added more functionality to NumberFactory.
+		CreateNumber(double) etc. and getZero() etc.
+
+May 02 05 rjm - Changed error behaviour for addVariable and setVarValue.
+		These now throw IllegalStateExceptions.
+ 
 Apr 24 05 rjm - Created a CallbackEvaluationI interface which 
 			replaces SpecialEvaluationI. This facilitates functions
 			which need access to the node tree.
@@ -91,6 +97,8 @@ Oct  1 njf - removed org.lsmp.* from compile in build.xml
 Many previous changes not included here. See the documentation for details.
 
 == org.lsmp.* =======================================================
+
+May 02 05 rjm - added toBase pfmc and a BaseFormat NumberFormat object.
 
 Apr 24 05 rjm - Reworked junit tests using inheretance.
 
